volexc/tests/ui/check_duplicate_struct_field.vol
// Duplicate field in struct
struct Foo {
    bar: u32
    bar: u64
}
